--- a/client/src/View/Components/JoiningBox/JoiningBox.style.css
+++ b/client/src/View/Components/JoiningBox/JoiningBox.style.css
@@ -1,26 +1,52 @@
 .modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width:100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.6);
-  }
-  
-  .modal-main {
-    position:fixed;
-    background: white;
-    width: 80%;
-    height: auto;
-    top:50%;
-    left:50%;
-    transform: translate(-50%,-50%);
-  }
-  
-  .display-block {
-    display: block;
-  }
-  
-  .display-none {
-    display: none;
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.507);
+}
+
+.modal-main {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  background: #28445bea;
+  width: 50%;
+  height: 50vh;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.display-block {
+  display: block;
+}
+
+.display-none {
+  display: none;
+}
+
+.button_style1 {
+  position: relative;
+  top: 5%;
+  width: 8em;
+}
+.role-selection-box {
+  position: relative;
+  top: 25%;
+}
+.roleLabel {
+  font-size: large;
+ position: relative;
+ right: 10%;
+ text-transform: capitalize;
+}
+
+.button_style2 {
+  position: relative;
+  top: 35%;
+  width: 8em;
+}
