--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,40 +1,32 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: radial-gradient(#2a68a9 3px, transparent 4px),
-  radial-gradient(#2a68a9 3px, transparent 4px),
-  linear-gradient(#fff 4px, transparent 0),
-  linear-gradient(
-    45deg,
-    transparent 74px,
-    transparent 75px,
-    #28445b 75px,
-    #28445b 76px,
-    transparent 77px,
-    transparent 109px
-  ),
-  linear-gradient(
-    -45deg,
-    transparent 75px,
-    transparent 76px,
-    #28445b 76px,
-    #28445b 77px,
-    transparent 78px,
-    transparent 109px
-  ),
-  #fff;
-background-size: 109px 109px, 109px 109px, 100% 6px, 109px 109px, 109px 109px;
-background-position: 54px 55px, 0px 0px, 0px 0px, 0px 0px, 0px 0px;
-width: 100%;
-height: 90vh;
-position: absolute;
+
+  background: linear-gradient(-45deg, rgba(255, 255, 255, 0.664), #2a67a99c);
+  background-size: 400% 400%;
+  animation: gradient 10s ease infinite;
+  width: 100%;
+  height: 90vh;
+  /* position: absolute; */
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
